--- a/frontend/horacerta/src/app/paginas/historico/historico.component.html
+++ b/frontend/horacerta/src/app/paginas/historico/historico.component.html
@@ -15,47 +15,45 @@
 
   <section class="content" style="font-size: 13px">
     <div class="box box-default collapsed-box">
-      <div class="box box-default">
-        <div class="box-header with-border">
-          <h3 class="box-title">Filtro de Horas</h3>
-          <div class="box-tools pull-right">
-            <button type="button" class="btn btn-box-tool" data-widget="collapse">
-              <i class="fa fa-plus"></i>
-            </button>
-          </div>
+      <div class="box-header with-border">
+        <h3 class="box-title">Filtro de Horas</h3>
+        <div class="box-tools pull-right">
+          <button type="button" class="btn btn-box-tool" data-widget="collapse">
+            <i class="fa fa-plus"></i>
+          </button>
         </div>
-        <div class="box-body">
-          <div class="row">
-            <div class="col-md-12">
+      </div>
+      <div class="box-body">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <div class="col-md-3 col-sm-6">
+                <label>Data inicial</label>
+                <div class="input-group date">
+                  <div class="input-group-addon">
+                    <i class="fa fa-calendar"></i>
+                  </div>
+                  <input type="date" class="form-control pull-right" [(ngModel)]="parametros.dataIni">
+                </div>
+              </div>
               <div class="form-group">
                 <div class="col-md-3 col-sm-6">
-                  <label>Data inicial</label>
+                  <label>Data final</label>
                   <div class="input-group date">
                     <div class="input-group-addon">
                       <i class="fa fa-calendar"></i>
                     </div>
-                    <input type="date" class="form-control pull-right" [(ngModel)]="parametros.dataIni">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="col-md-3 col-sm-6">
-                    <label>Data final</label>
-                    <div class="input-group date">
-                      <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
-                      </div>
-                      <input type="date" class="form-control pull-right" [(ngModel)]="parametros.dataFim">
-                    </div>
+                    <input type="date" class="form-control pull-right" [(ngModel)]="parametros.dataFim">
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="box-footer">
-          <div style="float: right">
-            <button type="button" (click)="pesquisarHistorico()" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Aguarde...">Consultar</button>
-          </div>
+      </div>
+      <div class="box-footer">
+        <div style="float: right">
+          <button type="button" (click)="pesquisarHistorico()" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Aguarde...">Consultar</button>
         </div>
       </div>
     </div>
@@ -81,13 +79,13 @@
                       </select> resultados por página</label>
                   </div>
                 </div>
-                <div class="col-sm-6" style="text-align:right">
+                <!-- <div class="col-sm-6" style="text-align:right">
                   <div id="example1_filter" class="dataTables_filter">
                     <label>Pesquisar:
                       <input type="text" class="form-control input-sm" placeholder="" aria-controls="example1">
                     </label>
                   </div>
-                </div>
+                </div> -->
               </div>
               <div class="table-responsive">
 
@@ -213,7 +211,7 @@
 
     <!-- inicio-modal-content -->
     <div class="modal fade" id="adicionarPonto" style="display: none;">
-      <div class="modal-dialog" style="width:45%;">
+      <div class="modal-dialog" style="width:55%;">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
